assets/css/_filters.scss
.select2-container--default, .select2-container--classic {
    .select2-selection--multiple {
        .select2-selection__choice {
            background-color: black;
            color: white;
            font-size: 1rem;
            padding: 5px !important;
            margin: 5px 5px 5px 0 !important;
        }
    }

    .select2-search--inline {
        input.select2-search__field {
            height: 2rem;
            font-size: 1rem;
        }
    }
}

aside#secondary {
    background-color: white;
    padding-left: 0;
    position: sticky;
    top: 7rem;

    .berocket_single_filter_widget {
        cursor: pointer;
    }
    
    h3 {
        font-size: 1.3rem;
        padding-left: 15px;
    }

    .bapf_ckbox {
        ul {
            padding-left: 0;
            display: flex;
            flex-wrap: wrap;

            li {
                margin-left: 1rem !important;

                input {
                    margin-top: 0;
                    width: 10px;
                    height: 10px;

                    &:checked {
                        background-color: black;
                        background-clip: border-box;
                    }
                }

                label {
                    margin-bottom: 0;
                    font-size: 1.1rem;
                }
            }
        }
    }
}

.select2-container--classic .select2-results__option{font-size: 1.1rem}
.select2-container--classic .select2-results__option--highlighted[aria-selected]{background-color:black;color:#fff}
.select2-container--classic .select2-results__group{cursor:default;display:block;padding:6px}
.select2-container--classic.select2-container--open .select2-dropdown{border-color:black}
.select2-container--classic .select2-selection--single:focus{border:1px solid black}
.select2-container--classic.select2-container--open .select2-selection--single{border:1px solid black}
.select2-container--classic .select2-selection--multiple:focus{border:1px solid black}
.select2-container--classic.select2-container--open .select2-selection--multiple{border:1px solid black}
.select2-container--classic .select2-results__option[aria-selected=true]{position:relative}
.select2-container--classic .select2-results__option[aria-selected=true]:after {
    content: '✓';
    position: absolute;
    right: 1rem;
    top: 50%;
    transform: translateY(-50%);
    width: 1rem;
    height: 1rem;
}
.select2-container--classic .select2-results__option--highlighted[aria-selected=true]:after {
    color: white;
}


@media only screen and (min-width:36em){
    aside#secondary {
        .bapf_ckbox {
            ul {
                flex-direction: column;

                li {
                    margin-left: 0 !important;
                }
            }
        }
    }
}
@media only screen and (min-width:48em){

}
@media only screen and (min-width:64em){

}
@media only screen and (min-width:80em){

}

